--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,8 @@ body { font-family: system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans
 
 b, strong { font-weight: bolder; }
 
+table { border-color: inherit; text-indent: 0; }
+
 summary { display: list-item; }
 
  h1, h3, p { margin: 0; }
@@ -22,6 +24,8 @@ body { font-family: inherit; line-height: inherit; }
 
 img { border-style: solid; }
 
+table { border-collapse: collapse; }
+
 h1, h3 { font-size: inherit; font-weight: inherit; }
 
 a { color: inherit; text-decoration: inherit; }
@@ -29,6 +33,8 @@ a { color: inherit; text-decoration: inherit; }
  embed, img, video { display: block; vertical-align: middle; }
 
 img, video { height: auto; max-width: 100%; }
+
+[hidden] { display: none; }
 
 * { --tw-border-opacity:1; border-color: rgba(229, 231, 235, var(--tw-border-opacity)); }
 
@@ -70,17 +76,17 @@ h1 { font-size: 1.125rem; line-height: 1.75rem; }
 
 ::-webkit-scrollbar { height: 6px !important; width: 6px !important; }
 
-:root { scroll-behavior: smooth; scrollbar-color: #d1d5db transparent !important; scrollbar-width: thin !important; }
+:root { scrollbar-color: #d1d5db transparent !important; scrollbar-width: thin !important; }
 
-#nav-icon { cursor: pointer; height: 22.5px; position: relative; transform: rotate(0deg); transition: .5s ease-in-out; width: 30px; }
+#nav-icon { cursor: pointer; height: 22px; position: relative; transform: rotate(0deg); transition: .5s ease-in-out; width: 30px; }
 
 #nav-icon span { background: #000; border-radius: 2px; display: block; height: 2px; left: 0; opacity: .8; position: absolute; transform: rotate(0deg); transition: .25s ease-in-out; width: 100%; }
 
-#nav-icon span:first-child { top: 0; transform-origin: left center; }
+#nav-icon span:first-child { top: 1px; transform-origin: left center; }
 
-#nav-icon span:nth-child(2) { top: 9px; transform-origin: left center; transition: opacity .2s; }
+#nav-icon span:nth-child(2) { top: 11px; transform-origin: left center; transition: opacity .2s; }
 
-#nav-icon span:nth-child(3) { top: 18px; transform-origin: left center; }
+#nav-icon span:nth-child(3) { top: 21px; transform-origin: left center; }
 
 #nav-icon.open span:first-child { top: -1.5px; transform: rotate(45deg); }
 
@@ -93,6 +99,8 @@ h1 { font-size: 1.125rem; line-height: 1.75rem; }
 .absolute { position: absolute; }
 
 .relative { position: relative; }
+
+.top-0 { top: 0; }
 
 .right-1 { right: .25rem; }
 
@@ -110,17 +118,29 @@ h1 { font-size: 1.125rem; line-height: 1.75rem; }
 
 .mr-1 { margin-right: .25rem; }
 
+.mb-10 { margin-bottom: 2.5rem; }
+
 .ml-2 { margin-left: .5rem; }
 
 .flex { display: flex; }
 
+.table { display: table; }
+
+.grid { display: grid; }
+
+.hidden { display: none; }
+
 .last\:hidden:last-child { display: none; }
+
+.h-40 { height: 10rem; }
+
+.h-64 { height: 16rem; }
 
 .h-screen { height: 100vh; }
 
 .max-h-screen { max-height: 100vh; }
 
-.w-44 { width: 11rem; }
+.w-full { width: 100%; }
 
 .w-screen { width: 100vw; }
 
@@ -130,13 +150,19 @@ h1 { font-size: 1.125rem; line-height: 1.75rem; }
 
 .max-w-prose { max-width: 65ch; }
 
+.max-w-screen-md { max-width: 768px; }
+
 .max-w-screen-xl { max-width: 1280px; }
 
 .flex-grow { flex-grow: 1; }
 
+.table-auto { table-layout: auto; }
+
 .transform { transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)); }
 
 .transform { --tw-translate-x:0; --tw-translate-y:0; --tw-rotate:0; --tw-skew-x:0; --tw-skew-y:0; --tw-scale-x:1; --tw-scale-y:1; }
+
+.hover\:-translate-y-1:hover { --tw-translate-y:-0.25rem; }
 
 @-webkit-keyframes spin { to { transform: rotate(1turn); } }
 
@@ -163,6 +189,10 @@ h1 { font-size: 1.125rem; line-height: 1.75rem; }
 
 .animate-bounce { -webkit-animation: bounce 1s infinite; animation: bounce 1s infinite; }
 
+.grid-cols-1 { grid-template-columns: repeat(1, minmax(0, 1fr)); }
+
+.grid-cols-2 { grid-template-columns: repeat(2, minmax(0, 1fr)); }
+
 .flex-row { flex-direction: row; }
 
 .flex-col { flex-direction: column; }
@@ -175,11 +205,27 @@ h1 { font-size: 1.125rem; line-height: 1.75rem; }
 
 .items-center { align-items: center; }
 
+.items-baseline { align-items: baseline; }
+
+.justify-start { justify-content: flex-start; }
+
+.justify-end { justify-content: flex-end; }
+
 .justify-center { justify-content: center; }
 
 .justify-between { justify-content: space-between; }
 
+.gap-0 { gap: 0; }
+
+.gap-1 { gap: .25rem; }
+
 .gap-2 { gap: .5rem; }
+
+.gap-4 { gap: 1rem; }
+
+.gap-6 { gap: 1.5rem; }
+
+.gap-8 { gap: 2rem; }
 
 .gap-x-1 { -moz-column-gap: .25rem; column-gap: .25rem; }
 
@@ -187,9 +233,15 @@ h1 { font-size: 1.125rem; line-height: 1.75rem; }
 
 .gap-x-4 { -moz-column-gap: 1rem; column-gap: 1rem; }
 
+.gap-y-2 { row-gap: .5rem; }
+
+.gap-y-4 { row-gap: 1rem; }
+
 .space-x-0 > :not([hidden]) ~ :not([hidden]) { --tw-space-x-reverse:0; margin-left: calc(0px*(1 - var(--tw-space-x-reverse))); margin-right: calc(0px*var(--tw-space-x-reverse)); }
 
 .space-x-1 > :not([hidden]) ~ :not([hidden]) { --tw-space-x-reverse:0; margin-left: calc(.25rem*(1 - var(--tw-space-x-reverse))); margin-right: calc(.25rem*var(--tw-space-x-reverse)); }
+
+.space-y-0 > :not([hidden]) ~ :not([hidden]) { --tw-space-y-reverse:0; margin-bottom: calc(0px*var(--tw-space-y-reverse)); margin-top: calc(0px*(1 - var(--tw-space-y-reverse))); }
 
 .space-y-2 > :not([hidden]) ~ :not([hidden]) { --tw-space-y-reverse:0; margin-bottom: calc(.5rem*var(--tw-space-y-reverse)); margin-top: calc(.5rem*(1 - var(--tw-space-y-reverse))); }
 
@@ -221,7 +273,15 @@ h1 { font-size: 1.125rem; line-height: 1.75rem; }
 
 .overflow-hidden { overflow: hidden; }
 
+.overscroll-auto { -ms-scroll-chaining: chained; overscroll-behavior: auto; }
+
+.overflow-ellipsis { text-overflow: ellipsis; }
+
+.break-all { word-break: break-all; }
+
 .rounded { border-radius: .25rem; }
+
+.rounded-md { border-radius: .375rem; }
 
 .rounded-full { border-radius: 9999px; }
 
@@ -230,8 +290,6 @@ h1 { font-size: 1.125rem; line-height: 1.75rem; }
 .border { border-width: 1px; }
 
 .border-b-2 { border-bottom-width: 2px; }
-
-.border-b { border-bottom-width: 1px; }
 
 .border-white { --tw-border-opacity:1; border-color: rgba(255, 255, 255, var(--tw-border-opacity)); }
 
@@ -243,7 +301,7 @@ h1 { font-size: 1.125rem; line-height: 1.75rem; }
 
 .border-green-700 { --tw-border-opacity:1; border-color: rgba(4, 120, 87, var(--tw-border-opacity)); }
 
-.border-blue-300 { --tw-border-opacity:1; border-color: rgba(147, 197, 253, var(--tw-border-opacity)); }
+.border-blue-500 { --tw-border-opacity:1; border-color: rgba(59, 130, 246, var(--tw-border-opacity)); }
 
 .border-blue-700 { --tw-border-opacity:1; border-color: rgba(29, 78, 216, var(--tw-border-opacity)); }
 
@@ -257,11 +315,29 @@ h1 { font-size: 1.125rem; line-height: 1.75rem; }
 
 .hover\:border-blue-300:hover { --tw-border-opacity:1; border-color: rgba(147, 197, 253, var(--tw-border-opacity)); }
 
+.hover\:border-blue-700:hover { --tw-border-opacity:1; border-color: rgba(29, 78, 216, var(--tw-border-opacity)); }
+
+.border-opacity-10 { --tw-border-opacity:0.1; }
+
 .border-opacity-80 { --tw-border-opacity:0.8; }
+
+.hover\:border-opacity-100:hover { --tw-border-opacity:1; }
+
+.bg-white { --tw-bg-opacity:1; background-color: rgba(255, 255, 255, var(--tw-bg-opacity)); }
+
+.hover\:bg-gray-200:hover { --tw-bg-opacity:1; background-color: rgba(229, 231, 235, var(--tw-bg-opacity)); }
 
 .hover\:bg-blue-100:hover { --tw-bg-opacity:1; background-color: rgba(219, 234, 254, var(--tw-bg-opacity)); }
 
+.fill-current { fill: currentColor; }
+
+.object-cover { -o-object-fit: cover; object-fit: cover; }
+
+.p-0 { padding: 0; }
+
 .p-2 { padding: .5rem; }
+
+.p-4 { padding: 1rem; }
 
 .p-7 { padding: 1.75rem; }
 
@@ -277,6 +353,10 @@ h1 { font-size: 1.125rem; line-height: 1.75rem; }
 
 .py-4 { padding-bottom: 1rem; padding-top: 1rem; }
 
+.pt-1 { padding-top: .25rem; }
+
+.pt-6 { padding-top: 1.5rem; }
+
 .pt-7 { padding-top: 1.75rem; }
 
 .pr-3 { padding-right: .75rem; }
@@ -285,7 +365,15 @@ h1 { font-size: 1.125rem; line-height: 1.75rem; }
 
 .pb-3 { padding-bottom: .75rem; }
 
+.pb-4 { padding-bottom: 1rem; }
+
 .pb-6 { padding-bottom: 1.5rem; }
+
+.pb-10 { padding-bottom: 2.5rem; }
+
+.pb-24 { padding-bottom: 6rem; }
+
+.pb-48 { padding-bottom: 12rem; }
 
 .pl-1 { padding-left: .25rem; }
 
@@ -297,13 +385,15 @@ h1 { font-size: 1.125rem; line-height: 1.75rem; }
 
 .text-center { text-align: center; }
 
+.align-baseline { vertical-align: baseline; }
+
 .font-sans { font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji; }
+
+.font-mono { font-family: ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,Liberation Mono,Courier New,monospace; }
 
 .text-xs { font-size: .75rem; line-height: 1rem; }
 
 .text-sm { font-size: .875rem; line-height: 1.25rem; }
-
-.text-base { font-size: 1rem; line-height: 1.5rem; }
 
  .text-xl { line-height: 1.75rem; }
 
@@ -317,6 +407,8 @@ h1 { font-size: 1.125rem; line-height: 1.75rem; }
 
 .text-6xl { font-size: 3.75rem; line-height: 1; }
 
+.font-light { font-weight: 300; }
+
 .font-normal { font-weight: 400; }
 
 .font-medium { font-weight: 500; }
@@ -324,6 +416,8 @@ h1 { font-size: 1.125rem; line-height: 1.75rem; }
 .font-bold { font-weight: 700; }
 
 .group:hover .group-hover\:font-medium { font-weight: 500; }
+
+.uppercase { text-transform: uppercase; }
 
 .lowercase { text-transform: lowercase; }
 
@@ -337,9 +431,11 @@ h1 { font-size: 1.125rem; line-height: 1.75rem; }
 
 .text-gray-600 { --tw-text-opacity:1; color: rgba(75, 85, 99, var(--tw-text-opacity)); }
 
-.text-gray-700 { --tw-text-opacity:1; color: rgba(55, 65, 81, var(--tw-text-opacity)); }
+.text-yellow-400 { --tw-text-opacity:1; color: rgba(251, 191, 36, var(--tw-text-opacity)); }
 
 .text-blue-700 { --tw-text-opacity:1; color: rgba(29, 78, 216, var(--tw-text-opacity)); }
+
+.group:hover .group-hover\:text-blue-700 { --tw-text-opacity:1; color: rgba(29, 78, 216, var(--tw-text-opacity)); }
 
 .hover\:text-gray-600:hover { --tw-text-opacity:1; color: rgba(75, 85, 99, var(--tw-text-opacity)); }
 
@@ -349,7 +445,13 @@ h1 { font-size: 1.125rem; line-height: 1.75rem; }
 
 .antialiased { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
 
+.opacity-80 { opacity: .8; }
+
 * { --tw-shadow:0 0 #0000; }
+
+.shadow { box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow); }
+
+.shadow { --tw-shadow:0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06); }
 
 * { --tw-ring-inset:var(--tw-empty,/*!*/ /*!*/); --tw-ring-offset-width:0px; --tw-ring-offset-color:#fff; --tw-ring-color:rgba(59,130,246,0.5); --tw-ring-offset-shadow:0 0 #0000; --tw-ring-shadow:0 0 #0000; }
 
@@ -357,12 +459,18 @@ h1 { font-size: 1.125rem; line-height: 1.75rem; }
 
 .duration-75 { transition-duration: 75ms; }
 
+.duration-200 { transition-duration: .2s; }
+
 .ease-in-out { transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); }
 
-@media (min-width: 640px) { .sm\:hidden { display: none; } .sm\:max-h-full { max-height: 100%; } .sm\:w-64 { width: 16rem; } .sm\:max-w-none { max-width: none; } .sm\:flex-row { flex-direction: row; } .sm\:items-start { align-items: flex-start; } .sm\:justify-start { justify-content: flex-start; } .sm\:space-x-3 > :not([hidden]) ~ :not([hidden]) { --tw-space-x-reverse:0; margin-left: calc(.75rem*(1 - var(--tw-space-x-reverse))); margin-right: calc(.75rem*var(--tw-space-x-reverse)); } .sm\:px-3 { padding-left: .75rem; padding-right: .75rem; } .sm\:px-7 { padding-left: 1.75rem; padding-right: 1.75rem; } .sm\:py-0 { padding-bottom: 0; padding-top: 0; } .sm\:pl-3 { padding-left: .75rem; } .sm\:pl-6 { padding-left: 1.5rem; } .sm\:text-left { text-align: left; } .sm\:text-sm { font-size: .875rem; line-height: 1.25rem; } .sm\:text-base { font-size: 1rem; line-height: 1.5rem; } .sm\:text-lg { font-size: 1.125rem; line-height: 1.75rem; } .sm\:text-xl { font-size: 1.25rem; line-height: 1.75rem; } }
+.ease-custom { transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1); }
 
-@media (min-width: 768px) { .md\:order-first { order: -9999; } .md\:order-last { order: 9999; } .md\:grid { display: grid; } .md\:max-w-2xl { max-width: 42rem; } .md\:grid-cols-2 { grid-template-columns: repeat(2, minmax(0, 1fr)); } .md\:justify-between { justify-content: space-between; } .md\:gap-2 { gap: .5rem; } .md\:divide-y-0 > :not([hidden]) ~ :not([hidden]) { --tw-divide-y-reverse:0; border-bottom-width: calc(0px*var(--tw-divide-y-reverse)); border-top-width: calc(0px*(1 - var(--tw-divide-y-reverse))); } .md\:px-10 { padding-left: 2.5rem; padding-right: 2.5rem; } }
+@media (min-width: 640px) { .sm\:absolute { position: absolute; } .sm\:relative { position: relative; } .sm\:top-0 { top: 0; } .sm\:hidden { display: none; } .sm\:h-64 { height: 16rem; } .sm\:max-h-full { max-height: 100%; } .sm\:w-64 { width: 16rem; } .sm\:max-w-screen-sm { max-width: 640px; } .sm\:transform { transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)); } .sm\:transform { --tw-translate-x:0; --tw-translate-y:0; --tw-rotate:0; --tw-skew-x:0; --tw-skew-y:0; --tw-scale-x:1; --tw-scale-y:1; } .sm\:hover\:-translate-y-1:hover { --tw-translate-y:-0.25rem; } .sm\:grid-cols-2 { grid-template-columns: repeat(2, minmax(0, 1fr)); } .sm\:grid-cols-3 { grid-template-columns: repeat(3, minmax(0, 1fr)); } .sm\:flex-row { flex-direction: row; } .sm\:items-start { align-items: flex-start; } .sm\:justify-start { justify-content: flex-start; } .sm\:justify-end { justify-content: flex-end; } .sm\:space-x-3 > :not([hidden]) ~ :not([hidden]) { --tw-space-x-reverse:0; margin-left: calc(.75rem*(1 - var(--tw-space-x-reverse))); margin-right: calc(.75rem*var(--tw-space-x-reverse)); } .sm\:bg-white { --tw-bg-opacity:1; background-color: rgba(255, 255, 255, var(--tw-bg-opacity)); } .sm\:px-3 { padding-left: .75rem; padding-right: .75rem; } .sm\:px-7 { padding-left: 1.75rem; padding-right: 1.75rem; } .sm\:py-0 { padding-bottom: 0; padding-top: 0; } .sm\:pb-14 { padding-bottom: 3.5rem; } .sm\:pl-3 { padding-left: .75rem; } .sm\:pl-6 { padding-left: 1.5rem; } .sm\:text-left { text-align: left; } .sm\:text-sm { font-size: .875rem; line-height: 1.25rem; } .sm\:text-lg { font-size: 1.125rem; line-height: 1.75rem; } .sm\:text-xl { font-size: 1.25rem; line-height: 1.75rem; } .sm\:opacity-0 { opacity: 0; } .sm\:hover\:opacity-80:hover { opacity: .8; } }
 
-@media (min-width: 1024px) { .lg\:px-20 { padding-left: 5rem; padding-right: 5rem; } }
+@media (min-width: 768px) { .md\:order-first { order: -9999; } .md\:order-last { order: 9999; } .md\:block { display: block; } .md\:grid { display: grid; } .md\:h-64 { height: 16rem; } .md\:max-w-2xl { max-width: 42rem; } .md\:grid-cols-2 { grid-template-columns: repeat(2, minmax(0, 1fr)); } .md\:grid-cols-4 { grid-template-columns: repeat(4, minmax(0, 1fr)); } .md\:justify-between { justify-content: space-between; } .md\:gap-2 { gap: .5rem; } .md\:divide-y-0 > :not([hidden]) ~ :not([hidden]) { --tw-divide-y-reverse:0; border-bottom-width: calc(0px*var(--tw-divide-y-reverse)); border-top-width: calc(0px*(1 - var(--tw-divide-y-reverse))); } .md\:px-10 { padding-left: 2.5rem; padding-right: 2.5rem; } }
+
+@media (min-width: 1024px) { .lg\:grid-cols-3 { grid-template-columns: repeat(3, minmax(0, 1fr)); } .lg\:grid-cols-4 { grid-template-columns: repeat(4, minmax(0, 1fr)); } .lg\:px-20 { padding-left: 5rem; padding-right: 5rem; } }
+
+@media (min-width: 1280px) { .xl\:grid-cols-3 { grid-template-columns: repeat(3, minmax(0, 1fr)); } }
 
 /*# sourceMappingURL=main.css.map */
