--- a/projects/template/index.html
+++ b/projects/template/index.html
@@ -52,7 +52,7 @@
 
 <body>
     <script>0</script>
-    <div class="antialiased flex flex-col overflow-hidden w-screen h-screen sm:flex-row">
+    <div class="antialiased flex flex-col overflow-hidden overscroll-auto w-screen h-screen sm:flex-row">
         <div @click.away="open = false" x-data="{ open: false }">
     <div class="flex flex-col max-h-screen sm:w-64">
         <div class="flex flex-row items-center justify-between p-7">
@@ -197,429 +197,329 @@
 </div>
 
 <!-- <embed src= "assets/docs/resume.pdf" type="application/pdf" width="100%" height="100%"> -->
-        <div
-  class="p-7 sm:px-7 md:px-10 lg:px-20 overflow-auto flex flex-col flex-grow">
-  
-  <div class="flex flex-col flex-grow divide-y justify-between max-w-screen-xl">
+        <div class="p-7 sm:px-7 md:px-10 lg:px-20 overflow-auto flex flex-col flex-grow pb-24 sm:pb-14">
 
-  <div class="divide-y">
+  <div class="flex flex-col flex-grow divide-y justify-between max-w-screen-xl overscroll-auto">
 
-    <div class="flex flex-row justify-between items-end">
-      <p class="text-xl font-bold sm:text-lg">
-        Very very very very very very very very very long Title
-      </p>
+    <div class="divide-y">
 
-      <div class="text-xl flex pl-4 gap-x-2">
-        
-        <a href=https://inigo.tech target="_blank" class="hover:text-blue-700">
-          &#xe120;
-        </a>
-        
+      <div class="flex flex-row justify-between items-end">
+        <p class="text-xl font-bold sm:text-lg">
+          Very very very very very very very very very long Title
+        </p>
 
-        
-        <a href=https://github.com/imartinezl target="_blank" class="hover:text-blue-700">
-          &#xe035;
-        </a>
-        
+        <div class="text-xl flex pl-4 gap-x-2">
+          
+          <a href=https://inigo.tech target="_blank" class="hover:text-blue-700">
+            &#xe120;
+          </a>
+          
+
+          
+          <a href=https://github.com/imartinezl target="_blank" class="hover:text-blue-700">
+            &#xe035;
+          </a>
+          
+        </div>
       </div>
-    </div>
-
-    
-    <div>
-      <div class="py-3 sm:max-h-full md:max-w-2xl">
-        
-        <img src="html51.png" class="">
-        
-        
-      </div>
-    </div>
-    
-
-    <div class="divide-y md:divide-y-0 md:grid md:grid-cols-2 md:gap-2 md:justify-between">
 
       
-      <div class="py-3 text-sm flex flex-wrap md:order-last">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque consequat, lectus luctus suscipit sagittis, lacus risus egestas massa, quis facilisis orci nisl non enim. Pellentesque in enim nisi. Cras suscipit nulla at accumsan sollicitudin. Morbi blandit ex at tincidunt tincidunt. Duis in condimentum massa, et commodo enim. Etiam eget maximus nisl, ac sollicitudin purus. 
+      <div>
+        <div class="py-3 sm:max-h-full md:max-w-2xl">
+          
+          <img src="SanFrancisco.jpg" class="">
+          
+          
+        </div>
+      </div>
+      
+
+      <div class="divide-y md:divide-y-0 md:grid md:grid-cols-2 md:gap-2 md:justify-between">
+
+        
+        <div class="py-3 text-sm flex flex-wrap md:order-last">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque consequat, lectus luctus suscipit sagittis, lacus risus egestas massa, quis facilisis orci nisl non enim. Pellentesque in enim nisi. Cras suscipit nulla at accumsan sollicitudin. Morbi blandit ex at tincidunt tincidunt. Duis in condimentum massa, et commodo enim. Etiam eget maximus nisl, ac sollicitudin purus. 
 <br /><br />
 Aenean tristique ornare dui, ut lobortis eros ullamcorper ut. Aliquam vitae sagittis sem. Ut elementum aliquet nulla et elementum. Curabitur mattis, dui vitae eleifend auctor, erat arcu auctor diam, in malesuada magna ipsum non tortor. Donec a tortor elit. Curabitur ornare luctus varius. Etiam hendrerit est in magna euismod, ut tincidunt lorem facilisis. Proin efficitur efficitur velit vel elementum.</p>
 
+        </div>
+        
+
+        <div class="py-3 text-sm md:order-first">
+
+          
+          <div class="flex flex-wrap gap-x-1 items-baseline">
+            <div class="">
+              Date:
+            </div>
+            <div class="p-0.5">
+              
+              Jul 2021
+              
+            </div>
+          </div>
+          
+
+
+          
+          <div class="flex flex-wrap gap-x-1 items-baseline">
+            <div class="">
+              Tags:
+            </div>
+            
+            
+            <a href=/tags/tag1/
+              class="rounded border border-opacity-10 hover:border-opacity-100 hover:border-blue-700 hover:text-blue-700">
+              #tag1
+            </a>
+            
+            
+            <a href=/tags/tag2/
+              class="rounded border border-opacity-10 hover:border-opacity-100 hover:border-blue-700 hover:text-blue-700">
+              #tag2
+            </a>
+            
+            
+            <a href=/tags/taglonglong/
+              class="rounded border border-opacity-10 hover:border-opacity-100 hover:border-blue-700 hover:text-blue-700">
+              #taglonglong
+            </a>
+            
+            
+            <a href=/tags/taglong/
+              class="rounded border border-opacity-10 hover:border-opacity-100 hover:border-blue-700 hover:text-blue-700">
+              #taglong
+            </a>
+            
+          </div>
+          
+
+          
+          
+          <div class="flex flex-wrap gap-x-1">
+            <div class="">
+              Keywords:
+            </div>
+            
+            <div class="">
+              #keyword1
+            </div>
+            
+            <div class="">
+              #keyword2
+            </div>
+            
+            <div class="">
+              #keyword3
+            </div>
+            
+            <div class="">
+              #keyword4
+            </div>
+            
+          </div>
+          
+
+          
+          
+          <div class="flex flex-wrap gap-x-1">
+            <div class="">
+              Technologies:
+            </div>
+            
+            <div class="">
+              technology1
+            </div>
+            <span class="last:hidden">·</span>
+            
+            <div class="">
+              technology2
+            </div>
+            <span class="last:hidden">·</span>
+            
+            <div class="">
+              technology3
+            </div>
+            <span class="last:hidden">·</span>
+            
+          </div>
+          
+
+
+        </div>
+
+      </div>
+
+      
+      <div class="py-3 text-sm">
+        <h1 id="header">Header</h1>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque consequat, lectus luctus suscipit sagittis, lacus risus egestas massa, quis facilisis orci nisl non enim. Pellentesque in enim nisi. Cras suscipit nulla at accumsan sollicitudin. Morbi blandit ex at tincidunt tincidunt. Duis in condimentum massa, et commodo enim. Etiam eget maximus nisl, ac sollicitudin purus.</p>
+
+<p>Aenean tristique ornare dui, ut lobortis eros ullamcorper ut. Aliquam vitae sagittis sem. Ut elementum aliquet nulla et elementum. Curabitur mattis, dui vitae eleifend auctor, erat arcu auctor diam, in malesuada magna ipsum non tortor. Donec a tortor elit. Curabitur ornare luctus varius. Etiam hendrerit est in magna euismod, ut tincidunt lorem facilisis. Proin efficitur efficitur velit vel elementum.</p>
+
       </div>
       
 
-      <div class="py-3 text-sm md:order-first">
 
-        
-        <div class="flex gap-x-1">
-          <div class="">
-            Date:
-          </div>
-          <div class="">
-            
-            Jul 2021
-            
-          </div>
+      
+      
+      
+      
+
+      
+
+      
+      
+
+      
+
+      
+
+      
+      <div class="py-3 flex flex-col">
+        <div class="pb-1.5 text-sm">
+          Related projects
         </div>
-        
+        <div class="grid grid-cols-2 sm:grid-cols-3 gap-4 sm:max-w-screen-sm">
+          
 
 
-        
-        <div class="flex flex-wrap gap-x-1">
-          <div class="">
-            Tags:
-          </div>
-          
-          
-          <a href=/tags/tag1/ rel="category tag" class="">
-            #tag1
+          <a href="/projects/project_2/index.html" class=" 
+            flex flex-wrap flex-col gap-2
+            p-2 border rounded group relative
+            hover:border-blue-700">
+            <div class="text-xs group-hover:text-blue-700 group-hover:font-medium">
+              Project 2 title
+            </div>
+            <div class="flex flex-wrap gap-x-1 text-xs text-gray-600 group-hover:text-blue-700">
+               <span>#tag1</span>  <span>#tag2</span>  <span>#taglonglong</span>  <span>#taglong</span> 
+            </div>
+            <div class="absolute bottom-0 right-1 group-hover:text-blue-700">
+              &#xe04e;
+            </div>
           </a>
           
           
-          <a href=/tags/tag2/ rel="category tag" class="">
-            #tag2
+          
+
+
+          
+
+      
+      
+
+      
+
+      
+
+      
+
+
+          <a href="/projects/project_1/index.html" class=" 
+            flex flex-wrap flex-col gap-2
+            p-2 border rounded group relative
+            hover:border-blue-700">
+            <div class="text-xs group-hover:text-blue-700 group-hover:font-medium">
+              Project 1 title
+            </div>
+            <div class="flex flex-wrap gap-x-1 text-xs text-gray-600 group-hover:text-blue-700">
+               <span>#tag1</span> 
+            </div>
+            <div class="absolute bottom-0 right-1 group-hover:text-blue-700">
+              &#xe04e;
+            </div>
           </a>
           
           
-          <a href=/tags/taglonglong/ rel="category tag" class="">
-            #taglonglong
+          
+
+
+          
+
+      
+      
+
+      
+
+      
+
+      
+
+
+          <a href="/projects/project_3/index.html" class=" 
+            flex flex-wrap flex-col gap-2
+            p-2 border rounded group relative
+            hover:border-blue-700">
+            <div class="text-xs group-hover:text-blue-700 group-hover:font-medium">
+              Project 3 title
+            </div>
+            <div class="flex flex-wrap gap-x-1 text-xs text-gray-600 group-hover:text-blue-700">
+               <span>#tag2</span> 
+            </div>
+            <div class="absolute bottom-0 right-1 group-hover:text-blue-700">
+              &#xe04e;
+            </div>
           </a>
           
           
-          <a href=/tags/taglong/ rel="category tag" class="">
-            #taglong
-          </a>
+          
+
+
+          
+
+      
+      
+
+      
+
+      
+
+
+          
+
+      
+      
+
+      
+
+      
+
+
+          
+
           
         </div>
-        
-
-        
-        
-        <div class="flex flex-wrap gap-x-1">
-          <div class="">
-            Keywords:
-          </div>
-          
-          <div class="">
-            #keyword1
-          </div>
-          
-          <div class="">
-            #keyword2
-          </div>
-          
-          <div class="">
-            #keyword3
-          </div>
-          
-          <div class="">
-            #keyword4
-          </div>
-          
-        </div>
-        
-
-        
-        
-        <div class="flex flex-wrap gap-x-1">
-          <div class="">
-            Technologies:
-          </div>
-          
-          <div class="">
-            $technology1
-          </div>
-          <span class="last:hidden">·</span>
-          
-          <div class="">
-            $technology2
-          </div>
-          <span class="last:hidden">·</span>
-          
-          <div class="">
-            $technology3
-          </div>
-          <span class="last:hidden">·</span>
-          
-        </div>
-        
-
-
       </div>
+      
+      
 
     </div>
 
 
     
     
-    
-    
-
-    
-
-    
-    
-
-    
-
-    
-
-    
-    <div class="py-3 flex flex-col">
-      <div class="pb-1.5">
-        Related projects
-      </div>
-      <div class="flex flex-row flex-wrap gap-2">
+    <div class="flex justify-between gap-x-4 py-3">
+      
+      <a href="/projects/project_0/index.html" class="flex min-w-0 gap-x-1 hover:text-gray-600">
+        <p>&#xe04a;</p>
+        <p class="">Prev</p>
         
+      </a>
+      
 
-
-        <a href="/projects/project_2/index.html"
-          class="relative flex flex-wrap flex-col gap-2 w-44 sm:w-64 sm:max-w-none p-2 border rounded hover:text-blue-700">
-          <div class="text-xs">
-            Project 2 title
-          </div>
-          <!-- 
-        <img src="/projects/project_2/obama.jpg" class="max-w-32">
-         -->
-          <div class="flex flex-wrap gap-x-1 text-xs text-gray-600 hover:text-blue-700">
-             <span>#tag1</span>  <span>#tag2</span>  <span>#taglonglong</span>  <span>#taglong</span> 
-          </div>
-          <div class="absolute bottom-0 right-1">
-            &#xe04e;
-          </div>
-        </a>
-        
-        
-        
-
-
-        
-
-    
-    
-
-    
-
-    
-
-    
-
-
-        <a href="/projects/project_1/index.html"
-          class="relative flex flex-wrap flex-col gap-2 w-44 sm:w-64 sm:max-w-none p-2 border rounded hover:text-blue-700">
-          <div class="text-xs">
-            Project 1 title
-          </div>
-          <!-- 
-        <img src="/projects/project_1/image.png" class="max-w-32">
-         -->
-          <div class="flex flex-wrap gap-x-1 text-xs text-gray-600 hover:text-blue-700">
-             <span>#tag1</span> 
-          </div>
-          <div class="absolute bottom-0 right-1">
-            &#xe04e;
-          </div>
-        </a>
-        
-        
-        
-
-
-        
-
-    
-    
-
-    
-
-    
-
-    
-
-
-        <a href="/projects/project_3/index.html"
-          class="relative flex flex-wrap flex-col gap-2 w-44 sm:w-64 sm:max-w-none p-2 border rounded hover:text-blue-700">
-          <div class="text-xs">
-            Project 3 title
-          </div>
-          <!-- 
-        <img src="/projects/project_3/portrait.jpg" class="max-w-32">
-         -->
-          <div class="flex flex-wrap gap-x-1 text-xs text-gray-600 hover:text-blue-700">
-             <span>#tag2</span> 
-          </div>
-          <div class="absolute bottom-0 right-1">
-            &#xe04e;
-          </div>
-        </a>
-        
-        
-        
-
-
-        
-
-    
-    
-
-    
-
-    
-
-
-        
-
-    
-    
-
-    
-
-    
-
-
-        
-
-        
-      </div>
+      
     </div>
     
-    
-
-  </div>
 
 
-  
-  
-  <div class="flex justify-between gap-x-4 py-1.5">
-    
-    <a href="/projects/project_0/index.html" class="flex min-w-0 gap-x-1 hover:text-gray-600">
-      <p>&#xe04a;</p>
-      <p class="">Prev</p>
-      
-    </a>
-    
-
-    
-  </div>
-  
-
-
-  <!-- <a href="/work.html" class="flex items-center sm:hidden py-2 hover:text-gray-600">
+    <!-- <a href="/work.html" class="flex items-center sm:hidden py-2 hover:text-gray-600">
     &#xe04d; Back to projects
     &#xe124;
   </a> -->
 
-  <!-- <div>
-    <h1 id="header">Header</h1>
-
-  </div> -->
-
+  </div>
 </div>
-</div>
-        
-        <!-- 
-    <ul>
-        
-        <li>
-          <a href="/projects/project_2/index.html">
-            <div>
-              Project 2 title
-            </div>
-            <div>
-              
-                May 2021
-              
-            </div>
-            <div>
-              
-            </div>
-          </a>
-  
-          
-            <img src="obama.jpg" alt="">
-          
-        </li>
-      
-        <li>
-          <a href="/projects/project_1/index.html">
-            <div>
-              Project 1 title
-            </div>
-            <div>
-              
-                Jun 2021
-              
-            </div>
-            <div>
-              
-            </div>
-          </a>
-  
-          
-            <img src="image.png" alt="">
-          
-        </li>
-      
-        <li>
-          <a href="/projects/project_3/index.html">
-            <div>
-              Project 3 title
-            </div>
-            <div>
-              
-                Jun 2021
-              
-            </div>
-            <div>
-              
-            </div>
-          </a>
-  
-          
-            <img src="portrait.jpg" alt="">
-          
-        </li>
-      
-        <li>
-          <a href="/projects/project_0/index.html">
-            <div>
-              Project 0 title
-            </div>
-            <div>
-              
-                Jul 2021
-              
-            </div>
-            <div>
-              
-            </div>
-          </a>
-  
-          
-            <img src="image.gif" alt="">
-          
-        </li>
-      
-        <li>
-          <a href="/projects/template/index.html">
-            <div>
-              Very very very very very very very very very long Title
-            </div>
-            <div>
-              
-                Jul 2021
-              
-            </div>
-            <div>
-              
-            </div>
-          </a>
-  
-          
-            <img src="html51.png" alt="">
-          
-        </li>
-      
-    </ul>
- -->
     </div>
 </body>
 
